# libpipecolors

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  README.md  acinclude.m4  aclocal.m4  autogen.sh  boost-pipecolors.cpp  configure  configure.ac  index.html  libpipecolors.7  libpipecolors.cpp  params.json  pcprintf.3  pipecolors.h  pipecolors.pc.in  test.cpp
examples/: example  example.c  example.cc  example.cpp  example2  example2.cpp  test  test.cpp
man/: Makefile.am
releases/: pipecolors-0.1.0.tar.bz2  timestamp
src/: Makefile.am  libpipecolors.cc  libpipecolors.pc.in  pcprintf.cc  pipecolors.h
tests/: test.cpp
